force-app/main/default/objects/Course_Catalog__c/Course_Catalog__c.object-meta.xml
<CustomObject>
    <label>Course Catalog</label>
    <nameField>
        <label>Course Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>