force-app/main/default/objects/Course_Catalog__c/fields/Class_Duration__c.field-meta.xml
<CustomField>
    <fullName>Class_Duration__c</fullName>
    <label>Class Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>