force-app/main/default/objects/Course_Catalog__c/fields/Course_Catalog_Tags__c.field-meta.xml
<CustomField>
    <fullName>Course_Catalog_Tags__c</fullName>
    <label>Course Catalog Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>