force-app/main/default/objects/Course_Catalog__c/fields/Master_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Class_Name__c</fullName>
    <label>Master Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>