force-app/main/default/objects/Course_Catalog__c/fields/Ratio_to_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Ratio_to_Instructor__c</fullName>
    <label>Ratio to Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>