force-app/main/default/objects/Course_Catalog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>